# Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  game_settings.json
GUI/include/AudioModule/: AudioManager.h
GUI/include/RenderModule/: IRenderEntity.h  RenderEntity.h  RenderManager.h  RenderModule.h
GUI/src/: main.cpp
UCI/: uci_main.cpp
bitboards/: Atlas.h  Position.cpp  Position.h
bitboards/MagicNumbers/: MagicNumberGenerator.cpp  MagicNumbers.h
data/: EvalWeights.h  Tuner.h  WeightsIO.h
